Added a custom ColorTheme created with Material Design Builder

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#F7FBEF</color>
+    <color name="background">#ff11150E</color>
     <color name="primary">#185701</color>
 </resources>
