--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="Theme.WorkMateTZ" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar">
+    <style name="Theme.WorkMateTZ" parent="android:Theme.Material.NoActionBar">
         <item name="android:windowBackground">@color/background</item>
     </style>
 </resources>
